ci: Publish an image to AWS ECR